<resources>
    <string name="app_name">AndroidBase</string>
    <string name="main_btn1">UI布局</string>
    <string name="main_btn2">Intent</string>
    <string name="main_btn3">Service</string>
    <string name="main_btn4">Media相关</string>
    <string name="main_btn5">其他</string>

    <string name="back_to">返回</string>

    <!--intent-->
    <string name="intent_open_browser">打开百度网页</string>
    <string name="intent_transfer_data">Intent间传递数据</string>
    <string name="intent_show_map">Intent显示地图</string>
    <string name="intent_wireless_setting">Intent Wifi设置</string>
    <string name="intent_ret_last">回传</string>
    <string name="intent_ret_request">传过来的值：</string>
    <string name="intent_ret_response">传回去的值：</string>

    <!--ui-->
    <string name="ui_show_notification">显示Notification</string>
    <string name="ui_delete_notification">取消Notification</string>
    <string name="title_activity_uiuser_login">Sign in</string>

    <!-- login -->
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="cancel_success">注销成功</string>
    <string name="cancel_fail">注销失败</string>
    <string name="account_empty">用户名为空</string>
    <string name="pwd_empty">密码为空</string>
    <string name="pwd_check_empty">确认密码为空</string>
    <string name="name_already_exist">用户名已经存在</string>
    <string name="pwd_not_the_same">两次密码输入不一样</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>

    <string name="spin_title">请选择</string>

    <!--Fragment-->
    <string name="action_settings">Settings</string>
    <string name="tab_menu_alert">提醒</string>
    <string name="tab_menu_profile">信息</string>
    <string name="tab_menu_pay">我的</string>
    <string name="tab_menu_setting">设置</string>

</resources>
