<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.IntentMainActivity">

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/back_to"/>

    <Button
        android:id="@+id/intent_open_browser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back2"
        android:text="@string/intent_open_browser"/>

    <Button
        android:id="@+id/intent_transfer_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back2"
        android:layout_toRightOf="@id/intent_open_browser"
        android:text="@string/intent_transfer_data"/>

    <Button
        android:id="@+id/intent_show_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back2"
        android:layout_toRightOf="@id/intent_transfer_data"
        android:text="@string/intent_show_map"/>

    <Button
        android:id="@+id/intent_wireless_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intent_open_browser"
        android:text="@string/intent_wireless_setting"/>

</RelativeLayout>
