<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.IntentTransferDataActivity">

    <TextView
        android:id="@+id/intent_ret_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_ret_request"/>
    <TextView
        android:id="@+id/intent_ret_request_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/intent_ret_request"
        android:text="11"/>

    <TextView
        android:id="@+id/intent_ret_response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/intent_ret_request"
        android:layout_marginTop="10dp"
        android:text="@string/intent_ret_response"/>
    <EditText
        android:id="@+id/data_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/intent_ret_response"
        android:text="world"/>

    <Button
        android:id="@+id/intent_ret_last"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_edit"
        android:text="@string/intent_ret_last"/>

</RelativeLayout>
